[build-system]
requires = ['setuptools>=61']
build-backend = 'setuptools.build_meta'
[project]
name = 'dcyto'
version = '0.1.6'
dependencies = ['numpy >=1.21',
    'scikit-image >= 0.19.3',
    'cellpose == 2.0',
    'torch',
    'matplotlib',
    'pathlib',
    'pandas',
    'fcswrite']
requires-python = ">=3.7"
authors = [
  {name = 'Daniel Foyt', email = 'daniel.a.foyt@gmail.com'}
]
description = 'imaging cytomerty tools'
readme = 'README.md'
classifiers = ['License :: OSI Approved :: MIT License',
'Programming Language :: Python :: 3'
]
[tool.setuptools]
package-dir = {"" = "src"}
